# lipi-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/examples/: async_usage.py  basic_font_match.py  batch_url_scan.py
examples/: urls.txt
src/lipi/: __init__.py  _polling.py  async_client.py  batch.py  cli.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_batch.py  test_cli.py  test_client.py
